# pair-programming

./: .gitignore  AGENTS.md  README.md  opencode  pyproject.toml
docs/design/: README.md  cli.md  (+9 more)
examples/: basic-task.md  real-run-artifact.md
tests/: test_artifacts_command.py  test_cancel_task.py  test_cli.py  test_cli_status_review_errors.py  test_config_command.py  test_eval_command.py  test_goal_file.py  test_history_command.py  test_intervene_task.py  test_metrics_command.py  test_native_compatibility.py  test_opencode_wrapper.py  test_patches.py  test_preflight.py  test_project_config.py  test_prompt_profiles.py  test_prompts.py  test_review_parser.py  test_status_query_modes.py  test_storage_models.py  test_tester_phase.py  test_workflow_progress.py
tickets/: README.md  ROADMAP.md  TICK-0001-ticket-driven-project-management.md  TICK-0002-pair-workflow-design-doc-set.md  TICK-0003-prompt-template-files.md  TICK-0004-cli-state-and-mvp-skeleton.md  TICK-0005-project-readme-tests-and-real-run-validation.md  TICK-0006-goal-file-support.md  TICK-0007-git-based-patch-diff.md  TICK-0008-artifacts-command.md  TICK-0009-cli-output-and-error-improvements.md  TICK-0010-expand-design-doc-backlog.md  TICK-0011-native-opencode-pair-integration.md  TICK-0012-configuration-and-default-policy-management.md  TICK-0013-stop-and-cancel-task-lifecycle-controls.md  TICK-0014-advanced-status-review-and-resume-controls.md  TICK-0015-preflight-checks-and-workspace-safety-guards.md  TICK-0016-review-validation-and-retry-hardening.md  TICK-0017-progress-detection-and-loop-prevention.md  (+51 more)
(+15 files in other folders)
