[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-pair"
version = "0.1.3"
description = "MVP AI pair programming workflow on top of opencode"
requires-python = ">=3.9"

[project.scripts]
opencode-pair = "opencode_pair.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
